--- a/style/style.css
+++ b/style/style.css
@@ -10,6 +10,7 @@ body {
 }
 #editors #file-manager {
   float: left;
+  width: 10%;
 }
 #editors .tabs {
   margin-top: 1em;
@@ -17,11 +18,16 @@ body {
   border-width: 1px;
   border-color: white;
   border-style: solid;
+  width: 45%;
+  margin-top: 0;
 }
 #editors .tabs li .ui-icon-close {
   float: left;
   margin: 0.4em 0.2em 0 0;
   cursor: pointer;
+}
+#editors .output {
+  min-height: 400px;
 }
 #editors #library-editor {
   float: left;
