--- a/style/style.less
+++ b/style/style.less
@@ -28,6 +28,7 @@ body {
 	
 	#file-manager {
 		float: left;
+		width: 10%;
 	}
 
 	.tabs { 
@@ -36,12 +37,20 @@ body {
 		border-width: 1px;
 		border-color: white;
 		border-style: solid;
+		
+		width: 45%;
+		margin-top: 0;
+
 		li .ui-icon-close
 		{ 
 			float: left; 
 			margin: 0.4em 0.2em 0 0; 
 			cursor: pointer; 
 		}
+	}
+
+	.output {
+		min-height: 400px;
 	}
 
 
